conformance/tests/httproute-307-redirect.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: 307-redirect
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /temporary
    filters:
    - type: RequestRedirect
      requestRedirect:
        statusCode: 307
